--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "chart.js": "^3.6.0",
     "ngx-chips": "^2.2.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
@@ -29,6 +30,7 @@
     "@angular-devkit/build-angular": "~12.2.7",
     "@angular/cli": "~12.2.7",
     "@angular/compiler-cli": "~12.2.0",
+    "@types/chart.js": "^2.9.34",
     "@types/file-saver": "^2.0.3",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
