--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,7 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/p-g-custom.css",
+              "./src/p-g-custom.css",
               "src/styles.css"
             ],
             "scripts": []
