--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "node": "14.16.0",
     "npm": "6.14.11"
   },
-  
   "dependencies": {
-    
     "@angular/animations": "~12.2.0",
     "@angular/cdk": "^12.2.12",
     "@angular/common": "~12.2.0",
@@ -34,10 +32,9 @@
     "@angular/cli": "~12.2.7",
     "@angular/compiler-cli": "~12.2.0",
     "typescript": "~4.3.5"
-    
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.7",
+    "@angular-devkit/build-angular": "^12.2.14",
     "@angular/cli": "~12.2.7",
     "@angular/compiler-cli": "~12.2.0",
     "@types/chart.js": "^2.9.34",
